[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Beetroot"
version="0.1.1"
authors = [
    {name = "Lorenzo Peri", email = "lorenzo@quantummotion.tech"},
]
description = "The definitive library for Single Elctron Box simulations"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    'scipy',
    'matplotlib',
    'numba',
    'numba-scipy'
]

[project.optional-dependencies]
tests = ["pytest"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore",
]
