[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Beetroot"
version="1.0.0"
authors = [
    {name = "Lorenzo Peri", email = "lorenzo@quantummotion.tech"},
]
description = "The definitive library for Single Elctron Box simulations"
requires-python = ">=3.9"
dependencies = [
    'numpy',
    'scipy',
    'matplotlib',
    'numba',
    'numba-scipy',
    'mpmath'
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore",
]
